# mcp-yt_transcript

./: README.md  YtTranscript.py  pyproject.toml
youtube_transcript_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
